# sofe

./: .env.pub  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  load_env.py  main.py  pyproject.toml  renovate.json5  requirements.txt
.github/workflows/: build.yml
app/: parser.py  plex.py  sonarr.py  variables.py
constants/: logger.py  logging.py  variables.py
