[project]
name = "sofe"
version = "0.1.0"
description = "SoFE performs two primary functions: it monitors non-filler episodes in Sonarr and generates Plex collections."
authors = [{name = "Bryan Jones", email = "unix.chkpwd@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "sonarr@git+https://github.com/devopsarr/sonarr-py.git@b7581f5bcd8c53171746140f4f9998edd0bf4d2e",
    "lxml>=5.3.0,<6.0.0",
    "requests>=2.32.3,<3.0.0",
    "plexapi>=4.15.16,<5.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "attrs>=25.0.0,<26.0.0",
    "ty>=0.0.20",
]

[tool.uv]
dev-dependencies = []
